// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure with a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
}

.c3 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c2 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c2 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <figcaption
    className="c2"
  >
    <span
      className="c3"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with caption and non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
}

.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c3 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c2 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: #222222;
  color: #FFFFFF;
  padding: 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
}

@media (min-width:37.5em) {
  .c3 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <span
    className="c2"
  >
    © 
    Getty Images
  </span>
  <figcaption
    className="c3"
  >
    <span
      className="c4"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
}

.c2 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: #222222;
  color: #FFFFFF;
  padding: 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <span
    className="c2"
  >
    © 
    Getty Images
  </span>
</figure>
`;

exports[`Figure without a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
  position: relative;
}

.c1 {
  display: block;
  width: 100%;
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
</figure>
`;
